Writing through lead item

--- a/2025/2025-10-12-wir.md
+++ b/2025/2025-10-12-wir.md
@@ -4,21 +4,35 @@
 ![Illustration of a user inspecting a Google AI page with a magnifying glass](https://w3w.news/img/googleAI-jurnej-furman-wc-2500.jpg)
 *Illustration by Jernej Furman via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by/2.0/deed.en). Original version slightly cropped here.*
 
-**Lead item goes here.** Yadda yadda yadda.
+**I generally find trial and error work pretty well** for about new technologies, especially at the beginner stage. Just use the thing for something that's low stakes (key qualifier), futz around a bit, and see what happens.  
 
-<!-- Riff on Google AI Essentials course. -->
+That had certainly been my approach with AI. But last week I decided to get a little more formal with things, getting my Google AI Essentials certification [on Coursera](https://www.coursera.org/specializations/ai-essentials-google).  
+
+I picked this one based on many positive press reviews elsewhere, as well as good word of mouth. And I'm glad to echo those kudos now based on firsthand experience.
+
+AI Essentials definitely gives a good high-level, non-technical introduction that should be useful to a lot of people. Plus, it's relatively short (perhaps a week or two of work, depending on your own pacing) and affordable at $49 for a monthly Coursera subscription.
+
+This course won't make you a leading expert, by any stretch. But if you're an educator, journalist, small-business owner, or other professional looking for an entry point to figure out what all the AI fuss in the news is about, I can definitely recommend AI Essentials as a good place to start.
+
+For me, as someone who had been experimenting with apps like ChatGPT and Microsoft Copilot on my own for some time, AI Essentials reinforced some things I was already doing with prompting and choosing tasks to apply AI to in the first place. But it also gave me a better understanding of *why* those things work, habits I should change, and some new ones I should adopt.
+
+For example, I vaguely understood that AI could [assume a persona](https://www.geeksforgeeks.org/artificial-intelligence/role-based-prompting/) in generating output from a prompt. But I had never really used that tactic much. Now I can defintely see how that's a useful tool to put to use more often.
+
+AI Essentials also spurred me to make some tweaks my [regular AI-assisted workflow](https://www.linkedin.com/pulse/embracing-new-ai-assisted-workflow-peter-mckay-ubtse/) for the newsletter. In this edition, ChatGPT and Gemini in particular played a bigger role in selecting stories for inclusion in the news rundown below, not just drafting summaries for things I had surfaced in my own reading.
+
+I can honestly say there are a few things included this time that wouldn't be here at all if not for the bots. And that's a *good* thing.
+
+As ever, final edit 100% by me. And if you're curious to see more detail about how I use AI in drafting w3w, check out the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub.
 
 ### Week in Review: Oct. 5-11, 2025
 
-- **Markets:** A new round of U.S. tariffs against China reverberated through global markets Friday, including crypto. The token market's global valuation slid 9% amid fears of a prolonged trade war between two of the world's biggest economies. ([The Block](https://www.theblock.co/post/374261/total-crypto-market-cap-tanks-over-9-following-trumps-latest-round-of-retaliatory-tariffs-on-china)) | The simultaneous surge in both Bitcoin and Gold—assets traditionally favored during uncertainty—is being driven by a flight from the US dollar amid global political turmoil and economic instability, suggesting a fundamental shift in safe-haven asset preferences. ([DW](https://www.dw.com/en/gold-tops-4000-as-demand-for-safe-assets-rises/a-74252609)) <!-- Link surfaced and summarized by Google Gemini. -->
+- **A global consortium of 10 major banks,** including Goldman Sachs, Citi, Deutsche Bank, and Banco Santander, is exploring [development of a stablecoin](https://group.bnpparibas/en/press-release/group-of-leading-international-banks-explores-issuance-of-a-1-1-reserve-backed-form-of-digital-money) pegged to a basket of major national currencies, run on a public blockchain. Analysts at JPMorgan, which is not participating in the project, estimate in a new report that stablecoins could generate [$1.4 trillion in additional demand](https://www.msn.com/en-gb/money/other/stablecoins-may-drum-up-14-trillion-of-extra-dollar-demand-by-2027-jpm-says/ar-AA1O4yWe) for the U.S. dollar by 2027.
 
-- **Stablecoins:**  | A group of top international banks, including Bank of America, Goldman Sachs, and Citi, are exploring the development of a joint stablecoin that would be pegged to G7 currencies and run on a public blockchain. This move comes as stablecoins, digital tokens backed by non-volatile fiat currencies, continue to gain traction and have the potential to draw significant deposits away from banks in emerging markets. ([Decrypt](https://decrypt.co/343842/bank-america-citi-goldman-sachs-exploring-joint-stablecoin)) <!-- Draft news summary by Leo/Llama 3.1 8B --> | - JPMorgan now estimates stablecoins could fuel $1.4 trillion in new dollar demand by 2027.  https://www.reuters.com/business/global-markets-stablecoins-jpm-2025-10-08/ <!-- Link surfaced and summarized by ChagGPT. --> |  **Global banks explore issuing G7-pegged stablecoins** A consortium including Citi, UBS, Goldman Sachs, and Bank of America is studying the launch of regulated stablecoins pegged to major world currencies.  If realized, it could bring blockchain-based money into the mainstream of cross-border finance.  ([Reuters](https://www.reuters.com/business/finance/major-banks-explore-issuing-stablecoins-pegged-g7-currencies-2025-10-10))  <!-- Link surfaced and summarized by ChagGPT. --> | - JPMorgan now estimates stablecoins could fuel $1.4 trillion in new dollar demand by 2027.  https://www.reuters.com/business/global-markets-stablecoins-jpm-2025-10-08/ <!-- Link surfaced and summarized by ChagGPT. --> | - **Global banks explore issuing G7-pegged stablecoins**  | A consortium including Citi, UBS, Goldman Sachs, and Bank of America is studying the launch of regulated stablecoins pegged to major world currencies.  If realized, it could bring blockchain-based money into the mainstream of cross-border finance.  ([Reuters](https://www.reuters.com/business/finance/major-banks-explore-issuing-stablecoins-pegged-g7-currencies-2025-10-10))  <!-- Link surfaced and summarized by ChagGPT. -->
+- **Crypto prices ran hot and cold.** Bitcoin hit a fresh record above $125,000 early in the week. But then traders' appetite for speculative bets on riskier assets, including digital tokens, faded following the announcement Friday of a new round of U.S. tariffs against China. The broader crypto market's global valuation [slid 9%](https://www.theblock.co/post/374261/total-crypto-market-cap-tanks-over-9-following-trumps-latest-round-of-retaliatory-tariffs-on-china) to $3.8 trillion on fears of a prolonged trade war between two of the world's biggest economies. Gold, a traditional economic safe haven, hit a [new all-time high](https://www.dw.com/en/gold-tops-4000-as-demand-for-safe-assets-rises/a-74252609) above $4,000 per troy ounce.
 
-- **A busy week for OpenAI:** https://www.latimes.com/entertainment-arts/business/story/2025-10-11/hollywood-ai-battle-heats-up-sora2-openai-sam-altman OpenAI’s AI video generator, Sora, has shifted from an opt-out to an opt-in model for using copyrighted characters, sparking backlash from users who felt the change limited their creative freedom, while copyright holders and organizations like the Motion Picture Association argue that OpenAI must ensure compliance with copyright laws. ([Gizmodo](https://gizmodo.com/you-cant-use-copyrighted-characters-in-openais-sora-anymore-and-people-are-freaking-out-2000669714)) | AMD sealed a chip-supply deal with OpenAI that includes an equity option. https://www.reuters.com/business/amd-signs-ai-chip-supply-deal-with-openai-gives-it-option-take-10-stake-2025-10-06/ <!-- Link surfaced and summarized by ChagGPT. --> | **OpenAI Unveils Reasoning and Creative Jumps:** At its Developer Day, OpenAI announced significant updates that redefine the upper limit of generative AI capabilities. The new GPT-5 Pro model was positioned as a "reasoning powerhouse," capable of navigating complex legal and financial scenarios, while the upgraded Sora 2 was presented as a complete video production system that can generate fully-realized videos with synchronized audio from simple scripts. ([The Neuron](https://www.theneuron.ai/explainer-articles/everything-openai-released-on-devday-2025-explained)) <!-- Link surfaced and summarized by Google Gemini. --> | AMD sealed a chip-supply deal with OpenAI that includes an equity option. https://www.reuters.com/business/amd-signs-ai-chip-supply-deal-with-openai-gives-it-option-take-10-stake-2025-10-06/ <!-- Link surfaced and summarized by ChagGPT. --> | - **A busy week for OpenAI:** Clash with Hollywood. https://www.latimes.com/entertainment-arts/business/story/2025-10-11/hollywood-ai-battle-heats-up-sora2-openai-sam-altman
+- **A raft of new AI product releases:** OpenAI's upgraded video generator Sora 2 sparked controversy over its handling of copyrighted material, prompting the company to hastily [implement new controls](https://gizmodo.com/you-cant-use-copyrighted-characters-in-openais-sora-anymore-and-people-are-freaking-out-2000669714)... At its Developer Day event on Monday, OpenAI unveiled several other products as well, including a new GPT-5 Pro language model that the company touted as a "reasoning powerhouse." The Neuron's Grant Harvey published a handy summary of all OpenAi's new stuff [here](https://www.theneuron.ai/explainer-articles/everything-openai-released-on-devday-2025-explained)... Google [released](https://www.reuters.com/business/google-launches-gemini-enterprise-ai-platform-business-clients-2025-10-09) a business-focused AI suite dubbed Gemini Enterprise... Meanwhile, Anthropic made a subtle but pointed critique of the glut of low-quality content generated on competiors' AI platforms by [opening a "Zero Slop Zone"](https://the-decoder.com/anthropics-marketing-department-opens-zero-slop-zone-in-new-york/) in New York. Visitors were urged to step away from screens and focus on human thought. The company also launched Petri, an open-source tool for automating AI safety audits.
 
-- **But its competitors were busy as well:**  Aiming to catch Microsoft’s Copilot and OpenAI’s enterprise offerings, Google released Gemini Enterprise — a suite that lets firms build internal assistants that talk to their own data.  Analysts say it could redefine workplace automation if pricing doesn’t scare off mid-market customers.  ([Reuters](https://www.reuters.com/business/google-launches-gemini-enterprise-ai-platform-business-clients-2025-10-09))  <!-- Link surfaced and summarized by ChagGPT. --> | - **Anthropic Combats "AI Slop" While Boosting Safety Tools:** Rival AI firm Anthropic made a subtle but pointed critique of the low-quality content glut by opening a "Zero Slop Zone" in New York, urging visitors to step away from screens and focus on human thought. Simultaneously, the company launched "Petri," an open-source tool designed to automate AI model safety audits. This dual approach highlights the growing industry focus on responsible AI development and a quality-first marketing strategy. ([The Decoder](https://the-decoder.com/anthropics-marketing-department-opens-zero-slop-zone-in-new-york/)) <!-- Link surfaced and summarized by Google Gemini. -->
-
-- **Deals:** Intercontinental Exchange, a leading exchange operator, has invested up to $2 billion in Polymarket, a prediction market platform that has been banned in several countries and was previously off-limits to U.S. users. This investment is expected to help Polymarket re-establish a U.S. presence and enhance its credibility. ([Wall Street Journal](https://www.wsj.com/business/deals/nyse-owner-near-deal-for-2-billion-stake-in-polymarket-1e02c88e?st=KXYgvz&reflink=desktopwebshare_permalink)) <!-- News summary drafted by Leo/Llama 3.1 8B --> | **Wall Street Bets on Prediction Markets, Signaling Regulatory Comfort:** The Intercontinental Exchange (ICE)—owner of the New York Stock Exchange—made a major, $2 billion investment in the crypto-powered prediction market Polymarket. This move signals the platform’s transformation from a regulatory outsider to a "Wall Street insider". The investment is a key indicator of increasing institutional comfort with decentralized financial mechanisms and a thawing regulatory landscape in specific web3 sectors.  ([WRAL](https://markets.financialcontent.com/wral/article/marketminute-2025-10-7-intercontinental-exchange-makes-bold-2-billion-bet-on-prediction-market-polymarket)) <!-- Link surfaced and summarized by Google Gemini. --> | CoinDesk: Shayne Coplan Becomes Youngest Self-Made Billionaire After Polymarket's $2B Investment: BBG | **Crypto Giants Pivot to AI Compute in Infrastructure Convergence:** Galaxy Digital announced a significant $460 million capital raise to transform its Texas bitcoin mining site into a specialized AI data hub. This strategic move by a leading crypto financial services firm signals a powerful, emerging trend of infrastructure convergence, where the high-power demand of Bitcoin mining facilities is being strategically repurposed for the high-compute needs of large AI models. ([The Block](https://www.theblock.co/post/374243/galaxy-raises-460-million-push-transform-texas-bitcoin-site-ai-data-hub)) <!-- Link surfaced and summarized by Google Gemini. -->
+- **Tech dealmaking remains hot as well.** AMD inked a chip-supply deal with OpenAI that grants the startup an equity option covering up to [10% of AMD's shares](https://www.msn.com/en-us/money/companies/amd-signs-ai-chip-supply-deal-with-openai-gives-it-option-to-take-a-10-stake/ar-AA1NXhye?ocid=BingNewsSerp&apiversion=v2&domshim=1&noservercache=1&noservertelemetry=1&batchservertelemetry=1&renderwebcomponents=1&wcseo=1)... Intercontinental Exchange, parent of the venerable New York Stock Exchange, made a strategic investment of [up to $2 billion](https://www.wsj.com/business/deals/nyse-owner-near-deal-for-2-billion-stake-in-polymarket-1e02c88e?st=KXYgvz&reflink=desktopwebshare_permalink) in the prediction platform Polymarket. The deal makes Polymarket’s founder Shayne Coplan, at 27 years old, the world's [youngest self-made billionaire](https://decrypt.co/343426/polymarket-shayne-coplan-youngest-self-made-billionaire-bloomberg)... Galaxy Digital said it has raised $460 million to convert its Texas bitcoin mining site [into an AI data hub](https://www.theblock.co/post/374243/galaxy-raises-460-million-push-transform-texas-bitcoin-site-ai-data-hub).
 
 ### Market Snapshot
 
@@ -77,45 +91,17 @@
 
 ### Looking Ahead
 
-- **Governments are getting more vocal about possible economic risks of AI and blockchain.**
+- **New warnings of AI-related market risk:** The G20’s Financial Stability Board cautioned that heavy concentration of financial models on a few large AI providers could [amplify market shocks](https://www.reuters.com/business/finance/global-financial-watchdogs-ramp-up-monitoring-ai-2025-10-10). The body is drafting standards to monitor AI use in trading, credit, and risk management... Separtely, the Bank of England warned of a growing possibility of a ["sudden correction" in global markets](https://www.theguardian.com/business/2025/oct/08/bank-of-england-warns-of-growing-risk-that-ai-bubble-could-burst), specifically citing the "stretched" valuations of leading AI companies.
 
-- **But they're also easing adoption of both.**
+- **But governments are also encouraging AI and crypto adoption,** jockeying to keep their jurisdictions competitive in such fast-growing categories. The European Commission unveiled a [€1 billion initiative](https://www.reuters.com/world/china/eu-rolls-out-11-billion-plan-ramp-up-ai-key-industries-amid-sovereignty-drive-2025-10-08) to embed AI into key sectors such as energy, healthcare, and manufacturing... British regulators [lifted a four-year ban](https://www.theblock.co/post/373828/uk-digital-asset-market-poised-20-growth-fca-lifts-four-year-bancrypto-etns) on retail investors buying crypto-related ETNs, a form of publicly issued debt securities... The Reserve Bank of India said it will test [digital certificates of deposit](https://www.reuters.com/world/india/indian-central-bank-launch-pilot-deposit-tokenisation-official-says-2025-10-07) using its own official blockchain network.
 
-
-
-
-
-
-
- **Central Banks Sound Alarm on the "AI Bubble" Risk:** The Bank of England's Financial Policy Committee warned of a growing risk of a "sudden correction" in global markets, specifically citing the "stretched" valuations of leading AI companies like OpenAI and Anthropic. The warning suggests investors may not be fully accounting for risks and potential bottlenecks in the sector, leaving equity markets exposed if adoption or progress disappoints. This marks a significant shift from mere investor hype to serious macroeconomic concern from a major global financial regulator. ([The Guardian](https://www.theguardian.com/business/2025/oct/08/bank-of-england-warns-of-growing-risk-that-ai-bubble-could-burst)) <!-- Link surfaced and summarized by Google Gemini. --> | **Global regulators warn of systemic financial risks from AI**  
-The G20’s Financial Stability Board cautioned that the heavy concentration of financial models on a few large AI providers could amplify market shocks.  The body is drafting standards to monitor AI use in trading, credit, and risk management.  ([Reuters](https://www.reuters.com/business/finance/global-financial-watchdogs-ramp-up-monitoring-ai-2025-10-10))  <!-- Link surfaced and summarized by ChagGPT. -->
-
-- **Tokenized-equity boom raises investor-protection alarms**  
-Regulators are flagging risks as startups race to issue blockchain tokens linked to listed stocks.  Many of these instruments lack voting rights and dividend access, leaving buyers exposed to opaque counterparties.  ([Reuters](https://www.reuters.com/sustainability/boards-policy-regulation/crypto-race-tokenize-stocks-raises-investor-protection-flags-2025-10-08))  <!-- Link surfaced and summarized by ChagGPT. -->
-
-
-
-- **EU launches €1 billion “Apply AI” plan to boost home-grown innovation** The European Commission unveiled a €1 billion initiative to embed artificial intelligence into key sectors such as energy, healthcare, and manufacturing.  The goal is to build sovereign capability and reduce reliance on U.S. and Chinese tech giants.  ([Reuters](https://www.reuters.com/world/china/eu-rolls-out-11-billion-plan-ramp-up-ai-key-industries-amid-sovereignty-drive-2025-10-08))  <!-- Link surfaced and summarized by ChagGPT. -->
-
-- The UK's financial regulator, the Financial Conduct Authority (FCA), has lifted its four-year ban on retail investors buying crypto exchange-traded notes (ETNs), allowing individuals to access these investment products for the first time. This move is expected to give the UK crypto market a boost, with up to 20% growth predicted, as it aligns the country with global leaders like the US, Canada, and the EU. ([The Block](https://www.theblock.co/post/373828/uk-digital-asset-market-poised-20-growth-fca-lifts-four-year-bancrypto-etns)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-India’s central bank pilots tokenized certificates of deposit.  The Reserve Bank of India will test digital certificates of deposit using its wholesale CBDC network — a move expected to modernize short-term funding markets and set precedent for other emerging economies.  ([Reuters](https://www.reuters.com/world/india/indian-central-bank-launch-pilot-deposit-tokenisation-official-says-2025-10-07))  <!-- Link surfaced and summarized by ChagGPT. -->
-
-
-
-
-
-
-
-
-
-- Researchers at Allameh Tabataba'i University have found that large language models, including those from companies like OpenAI and Meta, systematically change their approach to financial risk-taking behavior based on the gender identity they're asked to assume. When prompted to act as a woman, these models tend to become more risk-averse, mirroring real-world patterns, while some models remain consistent or even change their behavior unpredictably. ([Decrypt](https://decrypt.co/343871/tell-ai-models-act-like-women-most-become-more-risk-averse-study)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Researchers at Iran's Allameh Tabataba'i University** have found that some popular large language models tend to become more risk-averse when prompted to act as women. DeepSeek and Gemini both exhibited this pattern, but OpenAI’s GPT models stayed neutral. Meta’s Llama and xAI’s Grok produced inconsistent or reversed effects depending on the prompt. ([Decrypt](https://decrypt.co/343871/tell-ai-models-act-like-women-most-become-more-risk-averse-study))
 
 ### Odds & Ends
 
-- Two rare greenish comets, C/2025 A6 (Lemmon) and C/2025 R2 (SWAN), are visible in the Northern Hemisphere this month, offering a rare chance to spot them in the coming weeks. Binoculars or small telescopes are recommended to view the comets, with Comet Lemmon potentially visible to the naked eye on or around October 21. ([NBC News](https://www.nbcnews.com/science/space/two-greenish-comets-visible-night-sky-rcna236744)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Two rare greenish comets are visible** in the Northern Hemisphere this month using merely binoculars or a small telescope. ([NBC News](https://www.nbcnews.com/science/space/two-greenish-comets-visible-night-sky-rcna236744))
 
-- Maxwell House coffee is temporarily changing its name to Maxwell Apartment to highlight the brand's value proposition in a time of rising coffee and housing costs. The brand is offering a year's supply of its coffee for $40 on Amazon, which it claims can save consumers over $1,000 a year compared to daily café runs. ([Fast Company](https://www.fastcompany.com/91412570/maxwell-house-changed-its-name-to-maxwell-apartment)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Maxwell House coffee is temporarily changing its name** to Maxwell Apartment to highlight the brand's value proposition in a time of rising food and housing costs. ([Fast Company](https://www.fastcompany.com/91412570/maxwell-house-changed-its-name-to-maxwell-apartment))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
