Making copyedits suggested by Copilot

--- a/2025/2025-10-12-wir.md
+++ b/2025/2025-10-12-wir.md
@@ -4,25 +4,25 @@
 ![Illustration of a user inspecting a Google AI page with a magnifying glass](https://w3w.news/img/googleAI-jurnej-furman-wc-2500.jpg)
 *Illustration by Jernej Furman via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by/2.0/deed.en). Original version slightly cropped here.*
 
-**I generally find trial and error work pretty well** for about new technologies, especially at the beginner stage. Just use the thing for something that's low stakes (key qualifier), futz around a bit, and see what happens.  
+**I generally find trial and error work pretty well** when learning new technologies, especially at the beginner stage. Just use the thing for something that's low stakes (key qualifier), futz around a bit, and see what happens.  
 
-That had certainly been my approach with AI. But last week I decided to get a little more formal with things, getting my Google AI Essentials certification [on Coursera](https://www.coursera.org/specializations/ai-essentials-google).  
+That had certainly been my approach with AI. But last week I decided to get a little more formal with things, so I earned my Google AI Essentials certification [on Coursera](https://www.coursera.org/specializations/ai-essentials-google).  
 
-I picked this one based on many positive press reviews elsewhere, as well as good word of mouth. And I'm glad to echo those kudos now based on firsthand experience.
+I picked this one based on many positive press reviews elsewhere, as well as good word of mouth. And I'm glad to echo those kudos based on firsthand experience.
 
 AI Essentials definitely gives a good high-level, non-technical introduction that should be useful to a lot of people. Plus, it's relatively short (perhaps a week or two of work, depending on your own pacing) and affordable at $49 for a monthly Coursera subscription.
 
 This course won't make you a leading expert, by any stretch. But if you're an educator, journalist, small-business owner, or other professional looking for an entry point to figure out what all the AI fuss in the news is about, I can definitely recommend AI Essentials as a good place to start.
 
-For me, as someone who had been experimenting with apps like ChatGPT and Microsoft Copilot on my own for some time, AI Essentials reinforced some things I was already doing with prompting and choosing tasks to apply AI to in the first place. But it also gave me a better understanding of *why* those things work, habits I should change, and some new ones I should adopt.
+For me, as someone who had been experimenting with apps like ChatGPT and Microsoft Copilot on my own for some time, AI Essentials reinforced some things I was already doing with AI. But it also gave me a better understanding of *why* those things work, habits I should change, and some new ones I should adopt.
 
-For example, I vaguely understood that AI could [assume a persona](https://www.geeksforgeeks.org/artificial-intelligence/role-based-prompting/) in generating output from a prompt. But I had never really used that tactic much. Now I can defintely see how that's a useful tool to put to use more often.
+For example, I vaguely understood that AI could [assume a persona](https://www.geeksforgeeks.org/artificial-intelligence/role-based-prompting/) in generating output from a prompt. But I had never really used that tactic much in writing prompts. Now I can defintely see how that's a useful tool to use more often.
 
-AI Essentials also spurred me to make some tweaks my [regular AI-assisted workflow](https://www.linkedin.com/pulse/embracing-new-ai-assisted-workflow-peter-mckay-ubtse/) for the newsletter. In this edition, ChatGPT and Gemini in particular played a bigger role in selecting stories for inclusion in the news rundown below, not just drafting summaries for things I had surfaced in my own reading.
+AI Essentials also spurred me to make some tweaks my [regular AI-assisted workflow](https://www.linkedin.com/pulse/embracing-new-ai-assisted-workflow-peter-mckay-ubtse/) for the newsletter. In this edition, ChatGPT and Google's Gemini in particular played a bigger role in selecting stories from around the web for inclusion in the news rundown below, not just drafting summaries for things I had already surfaced in my own reading throughout the week.
 
-I can honestly say there are a few things included this time that wouldn't be here at all if not for the bots. And that's a *good* thing.
+I can honestly say there are a few links included this time that wouldn't be here at all if not for the bots. And that's a *good* thing.
 
-As ever, final edit 100% by me. And if you're curious to see more detail about how I use AI in drafting w3w, check out the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub.
+As ever, the final edit is 100% by me. And if you're curious to see more detail about how I use AI in drafting w3w, check out the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub. 😸
 
 ### Week in Review: Oct. 5-11, 2025
 
@@ -104,8 +104,6 @@ As ever, final edit 100% by me. And if you're curious to see more detail about h
 - **Maxwell House coffee is temporarily changing its name** to Maxwell Apartment to highlight the brand's value proposition in a time of rising food and housing costs. ([Fast Company](https://www.fastcompany.com/91412570/maxwell-house-changed-its-name-to-maxwell-apartment))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
-
-_**Please note, I regularly use several AI apps to assist production of w3w. But the final edit is 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub.**_
 
 _**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
 
