Adding headline + subhed, with drafting help from Copilot and Leo/Llama 3.1 8B

--- a/2025/2025-10-12-wir.md
+++ b/2025/2025-10-12-wir.md
@@ -1,5 +1,5 @@
-# TKTK
-## TKTK
+# Google offers a proper AI intro indeed
+## The AI Essentials course is a good option to level up on prompting and more.
 
 ![Illustration of a user inspecting a Google AI page with a magnifying glass](https://w3w.news/img/googleAI-jurnej-furman-wc-2500.jpg)
 *Illustration by Jernej Furman via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by/2.0/deed.en). Original version slightly cropped here.*
