--- a/2025/2025-10-12-wir.md
+++ b/2025/2025-10-12-wir.md
@@ -32,7 +32,7 @@ As ever, the final edit is 100% by me. And if you're curious to see more detail 
 
 - **A raft of new AI product releases:** OpenAI's upgraded video generator Sora 2 sparked controversy over its handling of copyrighted material, prompting the company to hastily [implement new controls](https://gizmodo.com/you-cant-use-copyrighted-characters-in-openais-sora-anymore-and-people-are-freaking-out-2000669714)... At its Developer Day event on Monday, OpenAI unveiled several other products as well, including a new GPT-5 Pro language model that the company touted as a "reasoning powerhouse." The Neuron's Grant Harvey published a handy summary of all OpenAi's new stuff [here](https://www.theneuron.ai/explainer-articles/everything-openai-released-on-devday-2025-explained)... Google [released](https://www.reuters.com/business/google-launches-gemini-enterprise-ai-platform-business-clients-2025-10-09) a business-focused AI suite dubbed Gemini Enterprise... Meanwhile, Anthropic made a subtle but pointed critique of the glut of low-quality content generated on competiors' AI platforms by [opening a "Zero Slop Zone"](https://the-decoder.com/anthropics-marketing-department-opens-zero-slop-zone-in-new-york/) in New York. Visitors were urged to step away from screens and focus on human thought. The company also launched Petri, an open-source tool for automating AI safety audits.
 
-- **Tech dealmaking remains hot as well.** AMD inked a chip-supply deal with OpenAI that grants the startup an equity option covering up to [10% of AMD's shares](https://www.msn.com/en-us/money/companies/amd-signs-ai-chip-supply-deal-with-openai-gives-it-option-to-take-a-10-stake/ar-AA1NXhye?ocid=BingNewsSerp&apiversion=v2&domshim=1&noservercache=1&noservertelemetry=1&batchservertelemetry=1&renderwebcomponents=1&wcseo=1)... Intercontinental Exchange, parent of the venerable New York Stock Exchange, made a strategic investment of [up to $2 billion](https://www.wsj.com/business/deals/nyse-owner-near-deal-for-2-billion-stake-in-polymarket-1e02c88e?st=KXYgvz&reflink=desktopwebshare_permalink) in the prediction platform Polymarket. The deal makes Polymarket’s founder Shayne Coplan, at 27 years old, the world's [youngest self-made billionaire](https://decrypt.co/343426/polymarket-shayne-coplan-youngest-self-made-billionaire-bloomberg)... Galaxy Digital said it has raised $460 million to convert its Texas bitcoin mining site [into an AI data hub](https://www.theblock.co/post/374243/galaxy-raises-460-million-push-transform-texas-bitcoin-site-ai-data-hub).
+- **The tech deals just keep coming.** AMD inked a chip-supply deal with OpenAI that grants the startup an equity option covering up to [10% of AMD's shares](https://www.msn.com/en-us/money/companies/amd-signs-ai-chip-supply-deal-with-openai-gives-it-option-to-take-a-10-stake/ar-AA1NXhye?ocid=BingNewsSerp&apiversion=v2&domshim=1&noservercache=1&noservertelemetry=1&batchservertelemetry=1&renderwebcomponents=1&wcseo=1)... Intercontinental Exchange, parent of the venerable New York Stock Exchange, made a strategic investment of [up to $2 billion](https://www.wsj.com/business/deals/nyse-owner-near-deal-for-2-billion-stake-in-polymarket-1e02c88e?st=KXYgvz&reflink=desktopwebshare_permalink) in the prediction platform Polymarket. The deal makes Polymarket’s founder Shayne Coplan, at 27 years old, the world's [youngest self-made billionaire](https://decrypt.co/343426/polymarket-shayne-coplan-youngest-self-made-billionaire-bloomberg)... Galaxy Digital said it has raised $460 million to convert its Texas bitcoin mining site [into an AI data hub](https://www.theblock.co/post/374243/galaxy-raises-460-million-push-transform-texas-bitcoin-site-ai-data-hub).
 
 ### Market Snapshot
 
